objects/Activity.object
<CustomObject>
    <fields>
        <fullName>ANI__c</fullName>
        <description>Number that called in regarding this activity</description>
        <label>ANI</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Activity_Count_Assigned_To_LPS_SS__c</fullName>
        <description>If the activity is assigned to a Sales Specialist or Technical Sales Specialist, then 1 else 0 for the current year.</description>
        <formula>If(text(Owner:User.Function__c )= &quot;Sales Specialist&quot;  || text(Owner:User.Function__c) = &quot;Technical Sales Spec&quot; &amp;&amp; Text(YEAR(ActivityDate))= text(Year(today())),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activity Count Curr Yr || Assigned to SS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Activity_Count_Curr_Yr_Assigned_LPS__c</fullName>
        <description>If the activity count is assigned an LPS, then 1 else 0.</description>
        <formula>IF( Text( Owner:User.Function__c ) =&quot;LPS&quot;  &amp;&amp; Text(YEAR(ActivityDate))= text(Year(today())),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activity Count Curr Yr || Assigned  LPS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Activity_Count_Curr_Yr__c</fullName>
        <description>Activity count is based on the date of the activity.</description>
        <formula>If(Text(YEAR(ActivityDate ))=text(Year(today())),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activity Count Curr Yr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Activity_Count_Prev_Yr_Assigned_To_SS__c</fullName>
        <description>If the activity is assigned to a Sales Specialist or a Technical Sales Spec and the activity date is in the previous year, then 1 else 0.</description>
        <formula>If(text(Owner:User.Function__c )= &quot;Sales Specialist&quot;  || text(Owner:User.Function__c) = &quot;Technical Sales Spec&quot; &amp;&amp; Text(YEAR(ActivityDate))= text(Year(today())-1),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activity Count Prev Yr || Assigned to SS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Activity_Count_Prev_Yr_Assigned_to_LPS__c</fullName>
        <description>If the activity owner is an LPS and the activity date is in the previous year, then 1 else 0.</description>
        <formula>IF( Text(Owner:User.Function__c) =&quot;LPS&quot;  &amp;&amp; Text(YEAR(ActivityDate))= text(Year(today())-1),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activity Count Prev Yr || Assigned LPS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Activity_Count_Prev_Yr_YTD__c</fullName>
        <description>Counts that activities from prev year YTD so comparisons can be made through same time period this year.</description>
        <formula>If(
ActivityDate &gt;= DATE(Year(Today())-1, 1, 1)  &amp;&amp; 
ActivityDate &lt;=  DATE(Year(Today())-1, Month(Today()), Day(today())),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activity Count || Prev Yr YTD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Activity_Count_Prev_Yr__c</fullName>
        <description>The activity count for the previous year is based on the date of the activity.</description>
        <formula>If(Text(YEAR(ActivityDate ))=text(Year(today())-1),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activity Count Prev Yr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Activity_Count__c</fullName>
        <formula>if(isblank( Id ),0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activity Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Activity_Indicator__c</fullName>
        <description>This field is a formula from the Activity Indicator on the user record.  It is used in the process builder.</description>
        <formula>text(Owner:User.Activity_Indicator__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activity Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Owner_18_Digit_ID__c</fullName>
        <formula>Owner:User.X18_Digit_User_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activity Owner 18 Digit ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Owner_Email__c</fullName>
        <formula>Owner:User.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activity Owner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Owner_First_Name__c</fullName>
        <formula>Owner:User.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activity Owner First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Owner_Name__c</fullName>
        <formula>Owner:User.FirstName&amp;&quot; &quot;&amp; Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activity Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Points__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Activity Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Activity_Reason__c</fullName>
        <label>Activity Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Activity_Sub_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Allergy</fullName>
                </value>
                <value>
                    <fullName>Animal Appearance</fullName>
                </value>
                <value>
                    <fullName>Animal Longevity</fullName>
                </value>
                <value>
                    <fullName>Animal Performance</fullName>
                </value>
                <value>
                    <fullName>Animal Rescues</fullName>
                </value>
                <value>
                    <fullName>Animal Shows (Horse, HSC, etc.)</fullName>
                </value>
                <value>
                    <fullName>Availability</fullName>
                </value>
                <value>
                    <fullName>Bag or Tag Issue</fullName>
                </value>
                <value>
                    <fullName>Bulk/discount</fullName>
                </value>
                <value>
                    <fullName>Call Drop</fullName>
                </value>
                <value>
                    <fullName>Calorie content</fullName>
                </value>
                <value>
                    <fullName>Cancel/change order</fullName>
                </value>
                <value>
                    <fullName>Cannot Print</fullName>
                </value>
                <value>
                    <fullName>Can you Freeze Feed?</fullName>
                </value>
                <value>
                    <fullName>Can you Order Feed Over the Phone?</fullName>
                </value>
                <value>
                    <fullName>Cat</fullName>
                </value>
                <value>
                    <fullName>Choke</fullName>
                </value>
                <value>
                    <fullName>College</fullName>
                </value>
                <value>
                    <fullName>Confirmation Info</fullName>
                </value>
                <value>
                    <fullName>Contamination</fullName>
                </value>
                <value>
                    <fullName>Cost of Product</fullName>
                </value>
                <value>
                    <fullName>Date Code</fullName>
                </value>
                <value>
                    <fullName>Dealer/Sales Praise</fullName>
                </value>
                <value>
                    <fullName>Dealer/Seller Issue</fullName>
                </value>
                <value>
                    <fullName>Delivery Schedule</fullName>
                </value>
                <value>
                    <fullName>Did Not Receive Coupon</fullName>
                </value>
                <value>
                    <fullName>Diet and Digestion</fullName>
                </value>
                <value>
                    <fullName>Dog</fullName>
                </value>
                <value>
                    <fullName>Donation Request</fullName>
                </value>
                <value>
                    <fullName>Do you Have Coupons Available</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Activity_Sub_Type__c</fullName>
        <description>Activity Sub-Type for the Task for Customer Operations</description>
        <label>Activity Sub-Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Activity_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active Dealer Inquiry</fullName>
                </value>
                <value>
                    <fullName>Active TSC Inquiry</fullName>
                </value>
                <value>
                    <fullName>Add-on (before cut-off)</fullName>
                </value>
                <value>
                    <fullName>Advertisement</fullName>
                </value>
                <value>
                    <fullName>Apparel Inquiry</fullName>
                </value>
                <value>
                    <fullName>Availability</fullName>
                </value>
                <value>
                    <fullName>Bulk Discount</fullName>
                </value>
                <value>
                    <fullName>Buy Direct from the Plant</fullName>
                </value>
                <value>
                    <fullName>Call Drop</fullName>
                </value>
                <value>
                    <fullName>Career Opportunities</fullName>
                </value>
                <value>
                    <fullName>Claims</fullName>
                </value>
                <value>
                    <fullName>Comments about the driver</fullName>
                </value>
                <value>
                    <fullName>Complaint</fullName>
                </value>
                <value>
                    <fullName>Compliment</fullName>
                </value>
                <value>
                    <fullName>Contract Inquiry</fullName>
                </value>
                <value>
                    <fullName>Coupon Inquiry</fullName>
                </value>
                <value>
                    <fullName>Dealer Complaint - Not Specie</fullName>
                </value>
                <value>
                    <fullName>Dealer Locator</fullName>
                </value>
                <value>
                    <fullName>Delivery Inquiry</fullName>
                </value>
                <value>
                    <fullName>Directions Inquiry</fullName>
                </value>
                <value>
                    <fullName>Donation Request</fullName>
                </value>
                <value>
                    <fullName>Estimated Time of Arrival</fullName>
                </value>
                <value>
                    <fullName>Feed Inquiry</fullName>
                </value>
                <value>
                    <fullName>Feed Tag Request or Inquiry</fullName>
                </value>
                <value>
                    <fullName>Final Delivery Comments</fullName>
                </value>
                <value>
                    <fullName>Freight Rate</fullName>
                </value>
                <value>
                    <fullName>Interest in Becoming a Dealer</fullName>
                </value>
                <value>
                    <fullName>International Inquiry</fullName>
                </value>
                <value>
                    <fullName>Invoice Request or Inquiry</fullName>
                </value>
                <value>
                    <fullName>Late Add-on (after cut-off)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <description>Type of Activity for the Task for Customer Operations</description>
        <label>Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Beef</fullName>
                </value>
                <value>
                    <fullName>Dairy</fullName>
                </value>
                <value>
                    <fullName>Dealer Inquiry</fullName>
                </value>
                <value>
                    <fullName>Equine</fullName>
                </value>
                <value>
                    <fullName>Fish and Aquatics</fullName>
                </value>
                <value>
                    <fullName>Game Bird</fullName>
                </value>
                <value>
                    <fullName>Goat</fullName>
                </value>
                <value>
                    <fullName>Honor Show Chow</fullName>
                </value>
                <value>
                    <fullName>Lab Diet</fullName>
                </value>
                <value>
                    <fullName>Mazuri</fullName>
                </value>
                <value>
                    <fullName>Milk ReplacerAM</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>No Answer</fullName>
                </value>
                <value>
                    <fullName>Order</fullName>
                </value>
                <value>
                    <fullName>Pet Companion Animal</fullName>
                </value>
                <value>
                    <fullName>Poultry</fullName>
                </value>
                <value>
                    <fullName>Product Inquiry</fullName>
                </value>
                <value>
                    <fullName>Pricing/Billing</fullName>
                </value>
                <value>
                    <fullName>Rabbit</fullName>
                </value>
                <value>
                    <fullName>Service Request</fullName>
                </value>
                <value>
                    <fullName>Sheep</fullName>
                </value>
                <value>
                    <fullName>Small Animal</fullName>
                </value>
                <value>
                    <fullName>Swine</fullName>
                </value>
                <value>
                    <fullName>Transfer</fullName>
                </value>
                <value>
                    <fullName>Transportation</fullName>
                </value>
                <value>
                    <fullName>Test Diet</fullName>
                </value>
                <value>
                    <fullName>Wild Bird</fullName>
                </value>
                <value>
                    <fullName>Wildlife (Deer/Wild Hog)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Activity__c</fullName>
        <defaultValue>if(CONTAINS($Profile.Name, &quot;Inside Sales&quot;),&quot;Phone&quot;, 
if(CONTAINS($Profile.Name, &quot;Sales Specialist&quot;),&quot;Farmgate&quot;, 
if(CONTAINS($Profile.Name, &quot;LPS&quot;),&quot;Farmgate&quot;, 
if(CONTAINS($Profile.Name, &quot;Area Sales Manager&quot;),&quot;Farmgate&quot;, 
if(CONTAINS($Profile.Name, &quot;Regional Director&quot;),&quot;Farmgate&quot;, 
&quot;&quot;)))))</defaultValue>
        <label>Activity</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type2__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Farmgate</fullName>
                </value>
                <value>
                    <fullName>Meeting with Dealer</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Quality/Service Issue</fullName>
                </value>
                <value>
                    <fullName>FARM VIP</fullName>
                </value>
                <value>
                    <fullName>Event at Dealer</fullName>
                </value>
                <value>
                    <fullName>Event at Producer</fullName>
                </value>
                <value>
                    <fullName>Tradeshow</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Postage</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Area_Sales_Manager__c</fullName>
        <formula>text(Owner:User.Area_Sales_Manager__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Area Sales Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To_Function__c</fullName>
        <formula>Text(Owner:User.Function__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned To Function</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To_Indicator__c</fullName>
        <formula>if(  Owner:User.X18_Digit_User_ID__c =   $User.X18_Digit_User_ID__c ,&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned To Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_to_Active_Status__c</fullName>
        <description>Formula to determine if the &quot;Assigned To&quot; on the activity is active or not.</description>
        <formula>Owner:User.Status_Current__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned to Active Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_to_Partner_Indicator__c</fullName>
        <formula>If(Owner:User.Partner_User__c = &quot;Yes&quot;,&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned to Partner Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_to_Profile__c</fullName>
        <description>The profile of the &quot;Assigned To&quot;</description>
        <formula>Owner:User.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned to Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_to_Region__c</fullName>
        <formula>Text(Owner:User.Sales_Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned to Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_to_Sales_Division__c</fullName>
        <formula>Text( Owner:User.Sales_Division__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned to Sales Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_to_Sales_Team_Id__c</fullName>
        <formula>Owner:User.Sales_Team_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned to Sales Team Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Recording__c</fullName>
        <description>Used for Customer Ops to link to call recording on FTP</description>
        <label>Call Recording</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Commentsx__c</fullName>
        <label>Commentsx</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Counselor_Selling__c</fullName>
        <label>Counselor Selling Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Relating</fullName>
                </value>
                <value>
                    <fullName>Discovering</fullName>
                </value>
                <value>
                    <fullName>Advocating</fullName>
                </value>
                <value>
                    <fullName>Supporting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Create_Date_Month_Year__c</fullName>
        <description>Transformed the Create Date to a month and year.  Example:  January  1, 2016 will be represented as 1-2016</description>
        <formula>Text(MONTH(DateValue(CreatedDate)))&amp;&quot;-&quot;&amp;Text(YEAR(DateValue(CreatedDate)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Create Date (Month &amp; Year)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Date_Year__c</fullName>
        <formula>Text(YEAR(DateValue(CreatedDate)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Create Date (Year)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By_Active_Status__c</fullName>
        <formula>CreatedBy.Status_Current__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By Active Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By_Region__c</fullName>
        <formula>Text( CreatedBy.Sales_Region__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By_Sales_ID__c</fullName>
        <formula>CreatedBy.Sales_Team_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By Sales Team ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_by_Function__c</fullName>
        <formula>Text(CreatedBy.Function__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created by Function</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_by_Sales_Division__c</fullName>
        <formula>Text(CreatedBy.Sales_Division__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created by Sales Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNIS__c</fullName>
        <description>DNIS field for customer operations</description>
        <label>DNIS</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field should be filled in when the activity is related to another Purina Sales Employee.</inlineHelpText>
        <label>Purina Sales Employee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_ID__c</fullName>
        <label>Event ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Day_2_Weeks_Ago__c</fullName>
        <description>The date of the first day of the week from two weeks ago.</description>
        <formula>(TODAY()- 7) - 
CASE( 
MOD((TODAY()-7) - DATE( 1900, 1, 7 ), 7 ), 
0,7, 
1,8, 
2,9, 
3,10, 
4,11, 
5,12, 
13)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Day 2 Weeks Ago</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Day_of_Last_Week__c</fullName>
        <formula>TODAY() - 
CASE( 
 MOD(TODAY() - DATE( 1900, 1, 7 ), 7 ), 
 0,7, 
 1,8, 
 2,9, 
 3,10, 
 4,11, 
 5,12, 
13)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Day of Last Week</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Historical_Activity_ID__c</fullName>
        <description>External ID for historical Activities migrated from Oracle CRM</description>
        <externalId>true</externalId>
        <label>Historical Activity ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initiative__c</fullName>
        <description>Initiative</description>
        <label>Initiative</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Equine Veterinarian Kit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Internal_Only__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Permission of this field is granted through a Permission Set.  Prevents the task from being shared with the Local Hires Community - if this is not selected, the task will be displayed to the Local Hires</description>
        <inlineHelpText>Select this option if you do not want to display this activity to Dealer/Coop Partners - If this is not selected, the activity will be displayed to Dealer/Coop Partners</inlineHelpText>
        <label>Internal Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Day_2_Weeks_Ago__c</fullName>
        <description>The date of the last day of the week from two days ago.</description>
        <formula>(TODAY()- 7 ) - 
CASE( 
MOD((TODAY()-7) - DATE( 1900, 1, 7 ), 7 ), 
0,1, 
1,2, 
2,3, 
3,4, 
4,5, 
5,6, 
7)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Day 2 Weeks Ago</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Week_This_Week_Ind__c</fullName>
        <formula>if(
And(
ActivityDate &gt;= First_Day_of_Last_Week__c, 
ActivityDate &lt;= First_Day_of_Last_Week__c + 13), &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Week &amp; This Week Ind</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marquee__c</fullName>
        <description>Used by Customer Ops to define how the inbound call came in (i.e. Direct ANI match, Area Code Search)</description>
        <label>Marquee</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>My_Task_Indicator__c</fullName>
        <formula>if( $User.X18_Digit_User_ID__c =  Activity_Owner_18_Digit_ID__c ,&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Task Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_People_Trained__c</fullName>
        <label>Number of People Trained</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <externalId>true</externalId>
        <label>Order #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Account_Number__c</fullName>
        <description>This field is populated via process Builder`</description>
        <label>Partner Account Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Call_Count__c</fullName>
        <formula>If(text( Type2__c ) = &quot;Sales Call&quot;,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Call Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Skill_Name__c</fullName>
        <description>Skill name for Customer Operations call routing</description>
        <label>Skill Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_Call_Count__c</fullName>
        <formula>If(text( Type2__c ) = &quot;Support Call&quot;,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Support Call Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trainer__c</fullName>
        <label>Trainer</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Nic Autry</fullName>
                </value>
                <value>
                    <fullName>Garrett Robertson</fullName>
                </value>
                <value>
                    <fullName>Rhonda Thode</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Two_Weeks_Ago_Ind__c</fullName>
        <formula>if(and(
ActivityDate  &gt;=  First_Day_2_Weeks_Ago__c,
ActivityDate  &lt;=   Last_Day_2_Weeks_Ago__c ),
&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Two Weeks Ago Ind</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type2__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Call</fullName>
                    <color>#0B6FCE</color>
                    <label>Sales Call</label>
                </value>
                <value>
                    <fullName>Support Call</fullName>
                    <color>#FF6666</color>
                    <label>Support Call</label>
                </value>
                <value>
                    <fullName>Event</fullName>
                    <color>#FFCC66</color>
                    <label>Event</label>
                </value>
                <value>
                    <fullName>To Do</fullName>
                    <color>#A845DC</color>
                    <label>To Do</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <color>#BBBBBB</color>
                    <label>Other</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_Grouped__c</fullName>
        <description>Groups the &quot;Type&quot; of activities into Sales Call, Service Call or Other</description>
        <formula>If( text(Type2__c) = &quot;To Do&quot;  || text(Type2__c)=&quot;Other&quot; ,&quot;Other&quot;,text(Type2__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type (Grouped)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visibility_Indicator__c</fullName>
        <description>If  the user is a partner user and the &quot;internal only&quot; checkbox is checked on the actrivity, then &quot;Yes&quot; else &quot;No&quot;.  This is used in reports so the correct activities will display to our partners.</description>
        <formula>If(
Not(Contains($User.Profile_Current__c ,&quot;Partner&quot;)) ,&quot;Yes&quot;,

if(
Subject=&quot;Re-submit Farm VIP Nomination&quot;,&quot;No&quot;,

If(
Contains($User.Profile_Current__c ,&quot;Partner&quot;) &amp;&amp;   IsVisibleInSelfService  = True, &quot;Yes&quot;, &quot;No&quot;

)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visibility Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X18_Digit_Activity_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18 Digit Activity ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inContact_Contact_ID__c</fullName>
        <description>Used for Customer Ops</description>
        <externalId>true</externalId>
        <label>inContact Contact ID</label>
        <length>11</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>of_Attendees__c</fullName>
        <label># of Attendees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pi__pardot_source_id__c</fullName>
        <description>Identifies the Pardot record that caused this activity to be created.</description>
        <externalId>true</externalId>
        <label>Pardot Source Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
</CustomObject>